--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 <body>
     <div id="loadingLibrariesDiv">
-        <div id="loadingLibrariesDivContent">AtticRadar</div>
+        <div id="loadingLibrariesDivContent">AtticRadar Returned</div>
         <div id="loadingLibrariesProgressBar" class="progress_bar">
             <span id="progressBarText" class="progress_bar_text"></span>
             <div id="loadingLibrariesProgressBarInner" class="progress_bar_inner"></div>
@@ -216,7 +216,7 @@
     -->
         <div id="radarHeader" class="radarHeader">
             <!-- <div id="top-left" style="color: #a0a0a0; font-size: 15px; line-height: 17px; text-align: left !important;">
-            <span><b style="font-weight: 900">AtticRadar</b><br>steepatticstairs.net</span>
+            <span><b style="font-weight: 900">AtticRadar Returned</b><br>cgray1234.github.io/AtticRadar-Returned/</span>
         </div> -->
             <div id="top-right" style="font-weight: bold"></div>
             <span id="radarInfoSpan" style="display: none">
@@ -238,7 +238,7 @@
                         class="fa fa-xmark"></i></div>
                 <div id="atcDlgBody" style="text-align: center">On June 6, 2025, the official AtticRadar website was shut down. The original developer, <a target="_blank" href="https://github.com/SteepAtticStairs/">SteepAtticStairs</a>, stated:
 
-<img src="statement.png" style="width: 34rem">
+                    <img src="statement.png" style="width: 34rem">
 
 With the source code left open, I decided to make a fork of the original code and modify it to keep AtticRadar running.
 
@@ -288,8 +288,8 @@ Feel free to DM me on Discord, my username is <code class="about_box_code">cgray
         <div id="attributionDiv" class="noselect">
             <b id="attributionDivContent">
                 <span><b style="font-weight: 900; z-index: 1; position: relative; border-bottom: none;"
-                        class="attributionDivText">AtticRadar</b><br><span style="font-weight: normal"
-                        class="attributionDivText">steepatticstairs.net</span></span>
+                        class="attributionDivText">AtticRadar Returned</b><br><span style="font-weight: normal"
+                        class="attributionDivText">cgray1234.github.io/AtticRadar-Returned</span></span>
             </b>
         </div>
 
